--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Book tracker</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
+  <body>
+    <h1 class="title">My book reading tracker</h1>
+    <section>
+      <h2 class="section completed">Completed books:</h2>
+      <ul class="list">
+        <li>A good girl's guide to murder</li>
+        <li>The reappearance of Rachel Price</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2 class="section reading">Currently reading:</h2>
+      <ul class="list">
+        <li>Murder at the bookstore</li>
+        <li>One of us is lying</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2 class="section toRead">To be read:</h2>
+      <ul class="list">
+        <li>A court of thorn and roses</li>
+        <li>Eliza and her monsters</li>
+      </ul>
+    </section>
+  </body>
 </html>
