Added scroll bar

--- a/index.html
+++ b/index.html
@@ -8,85 +8,163 @@
   </head>
   <body>
     <h1 class="title">My book tracker</h1>
-    <section class="completed-section">
+    <section class="completed-section hide-scroll" >
       <h2 class="section completed">Completed reading</h2>
 
       <div class="books-row">
-        <figure>
-          <div class="book-container">
-            <img
-              src="./images/agggtm.jpg"
-              class="book-cover"
-            />
-            <div class="overlay">
-              A straight-A student reopens a closed murder case for her school
-              project—only to uncover dangerous truths that someone in her town
-              will do anything to keep buried.
-            </div>
-          </div>
-        </figure>
-
-        <figure>
-          <div class="book-container">
-            <img
-              src="./images/price.jpg"
-              class="book-cover"
-            />
-            <div class="overlay">2024</div>
-          </div>
-        </figure>
-
-        <figure>
+        <div class="book-container">
           <img
-            src="./images/ice.jpg"
+            src="./images/agggtm.jpg"
             class="book-cover"
+            alt="A good girl's guide to murder"
           />
-        </figure>
-
-        <figure>
+          <div class="overlay">Rating<br />5/5</div>
+        </div>
+        <div class="book-container">
+          <img
+            src="./images/price.jpg"
+            class="book-cover"
+            alt="The reappearance of Rachel Price"
+          />
+          <div class="overlay">Rating<br />4/5</div>
+        </div>
+        <div class="book-container">
+          <img src="./images/ice.jpg" class="book-cover" alt="Ice breaker" />
+          <div class="overlay">Rating<br />3/5</div>
+        </div>
+        <div class="book-container">
           <img
             src="./images/hp1.jpg"
             class="book-cover"
+            alt="Harry potter and the Philoshoper's stone"
           />
-        </figure>
+          <div class="overlay">Rating<br />5/5</div>
+        </div>
+        <div class="book-container">
+          <img
+            src="./images/love.jpg"
+            class="book-cover"
+            alt="Twisted love"
+          />
+          <div class="overlay">Rating<br />4/5</div>
+        </div>
+        <div class="book-container">
+          <img
+            src="./images/games.jpg"
+            class="book-cover"
+            alt="Twisted games"
+          />
+          <div class="overlay">Rating<br />5/5</div>
+        </div>
+        <div class="book-container">
+          <img
+            src="./images/hate.jpg"
+            class="book-cover"
+            alt="Twisted hate"
+          />
+          <div class="overlay">Rating<br />4/5</div>
+        </div>
+        <div class="book-container">
+          <img
+            src="./images/fivefeet.jpg"
+            class="book-cover"
+            alt="Twisted hate"
+          />
+          <div class="overlay">Rating<br />4/5</div>
+        </div>
+        <div class="book-container">
+          <img
+            src="./images/ends.jpg"
+            class="book-cover"
+            alt="It ends with us"
+          />
+          <div class="overlay">Rating<br />4/5</div>
+        </div>
+        <div class="book-container">
+          <img
+            src="./images/starts.jpg"
+            class="book-cover"
+            alt="It starts with us"
+          />
+          <div class="overlay">Rating<br />4/5</div>
+        </div>
+        <div class="book-container">
+          <img
+            src="./images/sam.jpg"
+            class="book-cover"
+            alt="You've reached Sam"
+          />
+          <div class="overlay">Rating<br />5/5</div>
+        </div>
+        <div class="book-container">
+          <img
+            src="./images/ggbb.jpg"
+            class="book-cover"
+            alt="Good girl, Bad blood"
+          />
+          <div class="overlay">Rating<br />5/5</div>
+        </div>
+        <div class="book-container">
+          <img
+            src="./images/agad.jpg"
+            class="book-cover"
+            alt="As good as dead"
+          />
+          <div class="overlay">Rating<br />5/5</div>
+        </div>
+                
       </div>
     </section>
 
-    <section>
+    <section class="current-section hide-scroll">
       <h2 class="section reading">Currently reading</h2>
       <div class="books-row">
-        <figure>
+        <div class="book-container">
           <img
             src="./images/bookstore.jpg"
             class="book-cover"
+            alt="Muder at the bookstore"
           />
-        </figure>
+          <div class="overlay">Progress<br />11/394</div>
+        </div>
       </div>
     </section>
 
-    <section>
-      <h2 class="section toRead">To be read</h2>
+    <section class="to-read-section hide-scroll">
+      <h2 class="section to-read">To be read</h2>
       <div class="books-row">
-        <figure>
+        <div class="book-container">
           <img
             src="./images/thorn.jpg"
             class="book-cover"
+            alt="A Court of Thorn and Roses"
           />
-        </figure>
-
-        <figure>
+          <div class="overlay">Status<br />Bought</div>
+        </div>
+        <div class="book-container">
           <img
             src="./images/eliza.jpg"
             class="book-cover"
+            alt="Eliza and her monsters"
           />
-        </figure>
-
-        <figure>
+          <div class="overlay">Status<br />Bought</div>
+        </div>
+        <div class="book-container">
           <img
             src="./images/lying.jpg"
             class="book-cover"
+            alt="One of us is lying"
           />
-        </figure>
+          <div class="overlay">Status<br />To get</div>
+        </div>
+        <div class="book-container">
+          <img
+            src="./images/lies.jpg"
+            class="book-cover"
+            alt="Twisted lies"
+          />
+          <div class="overlay">Status<br />Bought</div>
+        </div>
       </div>
     </section>
   </body>
