Fixed scroll bug

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
       </div>
     </div>
-    <section id="completed" completed-section hide-scroll">
+    <section id="completed" class="completed-section hide-scroll">
       <h2 class="section completed">Completed reading</h2>
 
       <div class="books-row">
