Modified current section

--- a/index.html
+++ b/index.html
@@ -81,14 +81,17 @@
     </div>
   </section>
 
-  <section id="current" class="current-section hide-scroll">
+  <section id="current">
     <h2 class="section reading">Currently reading</h2>
-    <div class="books-row">
-      <div class="book-container">
-        <img src="./images/bookstore.jpg" class="book-cover" alt="Muder at the bookstore" />
-        <div class="overlay">Progress<br />11/394</div>
+    <div class="current-section hide-scroll">
+
+      <div class="books-row">
+        <div class="book-container">
+          <img src="./images/bookstore.jpg" class="book-cover" alt="Muder at the bookstore" />
+          <div class="overlay">Progress<br />11/394</div>
+        </div>
       </div>
-    </div>
+    </div>>
   </section>
 
   <section id="toread" class="to-read-section hide-scroll">
