Removed break tags and added span

--- a/index.html
+++ b/index.html
@@ -16,108 +16,165 @@
       <div class="dropdown-content">
         <a href="#completed">Completed</a>
         <a href="#current">Currently reading</a>
-        <a href="#toread">To be read</a>
+        <a href="#to-read">To be read</a>
       </div>
     </div>
   </div>
   <section id="completed">
-    <h2 class="section completed">Completed reading</h2>
-    <div class="completed-section hide-scroll">
+    <h2 class="completed-title">Completed reading</h2>
+    <div class="completed-div hide-scroll">
 
       <div class="books-row">
         <div class="book-container">
-          <img src="./images/agggtm.jpg" class="book-cover" alt="A good girl's guide to murder" />
-          <div class="overlay">Rating<br />5/5</div>
+          <img src="./images/agggtm.jpg" alt="A good girl's guide to murder" />
+          <div class="overlay">
+            <span>Rating</span>
+            <span>5/5</span>
+          </div>
         </div>
         <div class="book-container">
-          <img src="./images/price.jpg" class="book-cover" alt="The reappearance of Rachel Price" />
-          <div class="overlay">Rating<br />4/5</div>
+          <img src="./images/price.jpg" alt="The reappearance of Rachel Price" />
+          <div class="overlay">
+            <span>Rating</span>
+            <span>3/5</span>
+          </div>
         </div>
         <div class="book-container">
-          <img src="./images/ice.jpg" class="book-cover" alt="Ice breaker" />
-          <div class="overlay">Rating<br />3/5</div>
+          <img src="./images/ice.jpg" alt="Ice breaker" />
+          <div class="overlay">
+            <span>Rating</span>
+            <span>4/5</span>
+          </div>
         </div>
         <div class="book-container">
-          <img src="./images/hp1.jpg" class="book-cover" alt="Harry potter and the Philoshoper's stone" />
-          <div class="overlay">Rating<br />5/5</div>
+          <img src="./images/hp1.jpg" alt="Harry potter and the Philoshoper's stone" />
+          <div class="overlay">
+            <span>Rating</span>
+            <span>5/5</span>
+          </div>
         </div>
         <div class="book-container">
-          <img src="./images/love.jpg" class="book-cover" alt="Twisted love" />
-          <div class="overlay">Rating<br />4/5</div>
+          <img src="./images/love.jpg" alt="Twisted love" />
+          <div class="overlay">
+            <span>Rating</span>
+            <span>4/5</span>
+          </div>
         </div>
         <div class="book-container">
-          <img src="./images/games.jpg" class="book-cover" alt="Twisted games" />
-          <div class="overlay">Rating<br />5/5</div>
+          <img src="./images/games.jpg" alt="Twisted games" />
+          <div class="overlay">
+            <span>Rating</span>
+            <span>5/5</span>
+          </div>
         </div>
         <div class="book-container">
-          <img src="./images/hate.jpg" class="book-cover" alt="Twisted hate" />
-          <div class="overlay">Rating<br />4/5</div>
+          <img src="./images/hate.jpg" alt="Twisted hate" />
+          <div class="overlay">
+            <span>Rating</span>
+            <span>4/5</span>
+          </div>
         </div>
         <div class="book-container">
-          <img src="./images/fivefeet.jpg" class="book-cover" alt="Twisted hate" />
-          <div class="overlay">Rating<br />4/5</div>
+          <img src="./images/fivefeet.jpg" alt="Five feet apart" />
+          <div class="overlay">
+            <span>Rating</span>
+            <span>4/5</span>
+          </div>
         </div>
         <div class="book-container">
-          <img src="./images/ends.jpg" class="book-cover" alt="It ends with us" />
-          <div class="overlay">Rating<br />1/5</div>
+          <img src="./images/ends.jpg" alt="It ends with us" />
+          <div class="overlay">
+            <span>Rating</span>
+            <span>1/5</span>
+          </div>
         </div>
         <div class="book-container">
-          <img src="./images/starts.jpg" class="book-cover" alt="It starts with us" />
-          <div class="overlay">Rating<br />2/5</div>
+          <img src="./images/starts.jpg" alt="It starts with us" />
+          <div class="overlay">
+            <span>Rating</span>
+            <span>2/5</span>
+          </div>
         </div>
         <div class="book-container">
-          <img src="./images/sam.jpg" class="book-cover" alt="You've reached Sam" />
-          <div class="overlay">Rating<br />5/5</div>
+          <img src="./images/sam.jpg" alt="You've reached Sam" />
+          <div class="overlay">
+            <span>Rating</span>
+            <span>5/5</span>
+          </div>
         </div>
         <div class="book-container">
-          <img src="./images/ggbb.jpg" class="book-cover" alt="Good girl, Bad blood" />
-          <div class="overlay">Rating<br />5/5</div>
+          <img src="./images/ggbb.jpg" alt="Good girl, Bad blood" />
+          <div class="overlay">
+            <span>Rating</span>
+            <span>5/5</span>
+          </div>
         </div>
         <div class="book-container">
-          <img src="./images/agad.jpg" class="book-cover" alt="As good as dead" />
-          <div class="overlay">Rating<br />5/5</div>
+          <img src="./images/agad.jpg" alt="As good as dead" />
+          <div class="overlay">
+            <span>Rating</span>
+            <span>5/5</span>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
   <section id="current">
-    <h2 class="section reading">Currently reading</h2>
-    <div class="current-section hide-scroll">
+    <h2 class="reading-title">Currently reading</h2>
+    <div class="current-div hide-scroll">
 
       <div class="books-row">
         <div class="book-container">
-          <img src="./images/bookstore.jpg" class="book-cover" alt="Muder at the bookstore" />
-          <div class="overlay">Progress<br />11/394</div>
+          <img src="./images/bookstore.jpg" alt="Muder at the bookstore" />
+          <div class="overlay">
+            <span>Progress</span>
+            <span>11/345</span>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section id="toread">
-    <h2 class="section to-read">To be read</h2>
-    <div class="to-read-section hide-scroll">
+  <section id="to-read">
+    <h2 class="to-read-title">To be read</h2>
+    <div class="to-read-div hide-scroll">
 
       <div class="books-row">
         <div class="book-container">
-          <img src="./images/thorn.jpg" class="book-cover" alt="A Court of Thorn and Roses" />
-          <div class="overlay">Status<br />Bought</div>
+          <img src="./images/thorn.jpg" alt="A Court of Thorn and Roses" />
+          <div class="overlay">
+            <span>Status</span>
+            <span>Bought</span>
+          </div>
         </div>
         <div class="book-container">
-          <img src="./images/eliza.jpg" class="book-cover" alt="Eliza and her monsters" />
-          <div class="overlay">Status<br />Bought</div>
+          <img src="./images/eliza.jpg" alt="Eliza and her monsters" />
+          <div class="overlay">
+            <span>Status</span>
+            <span>Bought</span>
+          </div>
         </div>
         <div class="book-container">
-          <img src="./images/lying.jpg" class="book-cover" alt="One of us is lying" />
-          <div class="overlay">Status<br />To get</div>
+          <img src="./images/lying.jpg" alt="One of us is lying" />
+          <div class="overlay">
+            <span>Status</span>
+            <span>To get</span>
+          </div>
         </div>
         <div class="book-container">
-          <img src="./images/lies.jpg" class="book-cover" alt="Twisted lies" />
-          <div class="overlay">Status<br />Bought</div>
+          <img src="./images/lies.jpg" alt="Twisted lies" />
+          <div class="overlay">
+            <span>Status</span>
+            <span>Bought</span>
+          </div>
         </div>
         <div class="book-container">
-          <img src="./images/five.jpg" class="book-cover" alt="Five Survive" />
-          <div class="overlay">Status<br />Bought</div>
+          <img src="./images/five.jpg" alt="Five Survive" />
+          <div class="overlay">
+            <span>Status</span>
+            <span>Bought</span>
+          </div>
         </div>
       </div>
   </section>
