--- a/index.html
+++ b/index.html
@@ -7,21 +7,15 @@
   <title>Book tracker</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./styles/styles.css" />
 </head>
 
 <body>
-  <!-- <div class="navbar">
-    <a href="#home">Home</a>
-    <div class="dropdown">
-      <button class="dropbtn">My books</button>
-      <div class="dropdown-content">
-        <a href="#completed">Completed</a>
-        <a href="#current">Currently reading</a>
-        <a href="#to-read">To be read</a>
-      </div>
-    </div>
-  </div> -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Book Tracker</a>
